# techx-assessment-developing

./: .env  Cargo.toml  README.md  axum.dockerfile  docker-compose.yml  postgres.dockerfile
db/: init.sql
db/migrations/: 20240404014714_init.down.sql
db/migrations-for-tests/: 20240404040020_init.up.sql  20240404040056_fake_data.down.sql  20240404040056_fake_data.up.sql
src/: main.rs
src/users/: mod.rs
src/workspaces/: mod.rs
