[package]
name = "techx-assessment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }

sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "macros", "chrono", "migrate"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

dotenvy = "0.15.7"
chrono = { version = "0.4.37", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.4", features = ["util"] }
